--- a/src/Components/Styling/Landing.css
+++ b/src/Components/Styling/Landing.css
@@ -10,20 +10,3 @@
 h1 {
     font-size: 48px;
 }
-
-.fade-down {
-    opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-.fade-down::after {
-    content: "";
-    display: block;
-    height: 50px;
-}
-
-.fade-down.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
