--- a/src/Components/Styling/Navigation.css
+++ b/src/Components/Styling/Navigation.css
@@ -12,13 +12,12 @@
     height: 60px;
     padding: 0 150px;
     background-color: #2f4f4f;
+    border: 5px inset #2a3b3b;
 }
 
 .NavButton {
     display: inline-block;
     padding: 6px 12px;
-    /* background-color: darkcyan; */
-    color: white;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
 }
