--- a/src/Components/Styling/TextFormat.css
+++ b/src/Components/Styling/TextFormat.css
@@ -7,3 +7,7 @@
 .background {
     background-color: #132B2B;
 }
+
+.empty {
+    height: 100px;
+}
